--- a/requirements.txt
+++ b/requirements.txt
@@ -2,3 +2,4 @@ git+https://github.com/pyrogram/pyrogram.git@master#egg=pyrogram
 tgcrypto==1.2.5
 python-dotenv==1.0.1
 pymongo==4.7.2
+apscheduler==3.10.1
