--- a/requirements.txt
+++ b/requirements.txt
@@ -1,22 +1,16 @@
-# Packaging
-setuptools>=65.0.0
-wheel>=0.38.4
-
-# Telegram client
+# For your bot & scheduler
 git+https://github.com/pyrogram/pyrogram.git@master#egg=pyrogram
 tgcrypto==1.2.5
-
-# Environment vars
 python-dotenv==1.0.1
-
-# Database
 pymongo==4.7.2
-
-# Scheduling
 apscheduler==3.10.1
 python-dateutil==2.8.2
 pytz>=2023.3
 
-# Web server (if you expose FastAPI)
+# FastAPI server
 fastapi==0.95.1
 uvicorn[standard]==0.23.2
+
+# Packaging
+setuptools>=65.0.0
+wheel>=0.38.4
