--- a/requirements.txt
+++ b/requirements.txt
@@ -1,21 +1,15 @@
-# Telegram Bot Framework (PTB v21 – no Updater)
-python-telegram-bot==21.6
-
-# Scheduling / ENV / DB
+# Telegram Bot & Scheduling Core
+pyrogram==2.0.106
+tgcrypto==1.2.5
+python-dotenv==1.0.1
+pymongo==4.7.2
 apscheduler==3.10.1
 python-dateutil==2.8.2
 pytz>=2023.3
-python-dotenv==1.0.1
-pymongo==4.7.2
-dnspython
 
-# FastAPI (optional health endpoint etc.)
+# FastAPI server (optional health ping)
 fastapi==0.95.1
 uvicorn[standard]==0.23.2
-
-# (Optional) If you truly still need Pyrogram elsewhere, keep these; otherwise remove them.
-# pyrogram==2.0.106
-# tgcrypto==1.2.5
 
 # Packaging
 setuptools>=65.0.0
